--- a/ejercicio.css
+++ b/ejercicio.css
@@ -1,56 +1,64 @@
 
 body{
-    background-image: url(huellas.png);
-/*     -webkit-mask-image: linear-gradient(white, transparent);
-    mask-image: linear-gradient(black, transparent); */
+    background-image: url(huellas.png)
 }
-.mask1 {
-    -webkit-mask-image: linear-gradient(to bottom, transparent 25%, black 75%);
-    mask-image: linear-gradient(to bottom, transparent 25%, black 75%);
-  }
 
-h1 {
-    background-color: white;
-    opacity: 0.9;
+.mask {
+  background-color: rgba(97, 95, 95, 0.3);
+}
+
+h3 {
+    background-color: rgb(201, 194, 194);
+    opacity: 0.8;
     color: rgb(167, 32, 88) ;
-    font-family: "Papyrus";
+    font-family: 'Architects Daughter', cursive;
     text-align: center;
-    font-size: 80px;
+    font-size: 60px;
     text-shadow: 2px 2px rgb(219, 117, 151);
   }
 
-h3{
+h5{
     background-color: white;
     opacity: 0.9;
     color: rgb(30, 209, 69) ;
-    font-family: "Papyrus";
-    text-align: left;
-    font-size: 50px;
+    font-family: 'Architects Daughter', cursive;
+    text-align: center;
+    font-size: 30px;
   }
 p{
     background-color: white;
     opacity: 0.9;
     color: rgb(4, 19, 7) ;
-    font-family: "Papyrus";
-    text-align: left;
-    font-size: 24px;
+    font-family: 'Architects Daughter', cursive;
+    text-align: justify;
+    font-size: 20px;
+    padding: 20 px;
 }
 ul {
     list-style-type: inside;
-    margin: 0;
-    padding: 0;
+    margin: 5px;
+    padding: 35px;
     background-color: white;
     opacity: 0.95;
-    font-family: "Papyrus";
+    font-family: 'Architects Daughter', cursive;
     text-align: left;
     font-size: 24px;
   }
 
   div {
     float: left;
-    width: 500px;
+    width: 300px;
     border: 12px solid rgb(100, 10, 141);
-    padding: 25px;
+    padding: 15px;
     margin: 10px;
   }
 
+  .otto {
+    float: right;
+    background-color: rgba(97, 95, 95, 0.3);
+    width: 460px;
+    border: 12px solid rgb(100, 10, 141);
+    padding: 15px;
+    margin: 10px;
+    
+  }
